flex/flex-tests/testData/js2_highlighting/HighlightInternalThingsFromOtherPackage.js2
package <error descr="Package name 'foo' does not correspond to file path ''">foo</error> {
  class HighlightInternalThingsFromOtherPackage {}
}

<error descr="Package should be first statement in file">package</error> <error descr="Package name 'foo2' does not correspond to file path ''">foo2</error> {
  public class <error descr="Class 'HighlightInternalThingsFromOtherPackage3' should be defined in file 'HighlightInternalThingsFromOtherPackage3.js2'">HighlightInternalThingsFromOtherPackage3</error> {
    function foo() {}
  }
}

<error descr="Package should be first statement in file">package</error> <error descr="Package name 'foo3' does not correspond to file path ''">foo3</error> {
  public interface <error descr="Class 'HighlightInternalThingsFromOtherPackage4' should be defined in file 'HighlightInternalThingsFromOtherPackage4.js2'">HighlightInternalThingsFromOtherPackage4</error> {
    function foo();
  }
}

<error descr="Package should be first statement in file">package</error> <error descr="Package name 'bar' does not correspond to file path ''">bar</error> {
  import foo.<error descr="Element is not accessible">HighlightInternalThingsFromOtherPackage</error>;
  import foo2.HighlightInternalThingsFromOtherPackage3;
  import foo3.HighlightInternalThingsFromOtherPackage4;
  var <error descr="More than one externally visible symbol defined in file"><error descr="Variable 'x' should be defined in file 'x.js2'">x</error></error>:<error descr="Element is not accessible">HighlightInternalThingsFromOtherPackage</error>;
  var <error descr="More than one externally visible symbol defined in file"><error descr="Variable 'x2' should be defined in file 'x2.js2'">x2</error></error>:HighlightInternalThingsFromOtherPackage2;
  var <error descr="More than one externally visible symbol defined in file"><error descr="Variable 'x3' should be defined in file 'x3.js2'">x3</error></error>:HighlightInternalThingsFromOtherPackage3;
  var <error descr="More than one externally visible symbol defined in file"><error descr="Variable 'x4' should be defined in file 'x4.js2'">x4</error></error>:HighlightInternalThingsFromOtherPackage4;
  x3.<error descr="Element is not accessible">foo</error>();
  x4.foo();
}

import foo2.HighlightInternalThingsFromOtherPackage3;
var x3:HighlightInternalThingsFromOtherPackage3;
x3.<error descr="Element is not accessible">foo</error>();

<error descr="Package should be first statement in file">package</error> <error descr="Package name 'bar' does not correspond to file path ''">bar</error> {
  class <error descr="Class 'HighlightInternalThingsFromOtherPackage2' should be defined in file 'HighlightInternalThingsFromOtherPackage2.js2'">HighlightInternalThingsFromOtherPackage2</error> {}
}

<error descr="Package should be first statement in file">package</error> <error descr="Package name 'xyz' does not correspond to file path ''">xyz</error> {
[ExcludeClass]
public class <error descr="Class 'MineGod' should be defined in file 'MineGod.js2'">MineGod</error> {}
}

<error descr="Package should be first statement in file">package</error> {
  import xyz.MineGod;
}